# saucedemo

./: .gitignore  README.md  conftest.py  pyproject.toml  pytest.ini
.github/workflows/: action.yml  push.yml
pages/: base_page.py  cart_page.py  catalog_page.py  checkout_page.py  locators.py  login_page.py  main_page.py
tests/: First_try.py  TC_005.00.01.py  conftest.py  test_002_00_01.py  test_005_00_01.py  test_AT_003_04_01.py  test_AT_003_04_01_anton.py  test_AT_003_06_02.py  test_cart.py  test_catalog_00_01.py  test_catalog_page.py  test_login.py
