[tool.poetry]
name = "saucedemo"
version = "0.1.0"
description = ""
authors = ["pyrates_team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
black = "^22.10.0"
flake8 = "^5.0.4"
pytest = "^7.2.0"
selenium = "^4.6.0"
webdriver-manager = "^3.8.4"
color = "^0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
